Fix:		Dark mode compatibility

--- a/private/sass/components/_icons.scss
+++ b/private/sass/components/_icons.scss
@@ -37,10 +37,6 @@ $svg-colors: (
     }
 }
 
-svg path {
-    fill: inherit;
-}
-
 // admin
 .djangocms-icon .icon > input {
     float: left;
